2012-04-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.5-beta-20120426-1 released.

	* configure.ac (AC_INIT): Version number updated.
	* srcdist-doc/NEWS.in: Updated; bug-fix notifications added.
	* All files (r0-5-beta-20120426-1): Tag assigned.

2012-04-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Interim work-around for MinGW-Bug #3520864.

	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
	[DEBUG_TRACE_DEPENDENCIES]: Add request flags to messages reporting
	the scheduling of installation activities.

	* src/pkgexec.cpp (pkgXmlDocument::Schedule): Add temporary diagnostic
	hooks to confirm request flags; bracket them with #if 0 ... #endif.
	[ACTION_PRIMARY && pre-scheduled request]: Don't trash request flags
	when updating the pre-existing action item data.

2012-04-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug #3520488

	* src/pkgexec.cpp (action_code): Check for, and reject NULL pointer
	passed as action request string; also reject ambiguous abbreviations.

	* src/climain.cpp (climain): Discriminate between NULL pointer and
	other forms of invalid action keyword matching failures.

2012-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.5-beta-20120416-1 released.

	* configure.ac (AC_INIT): Version number updated.
	(YEARS_OF_ISSUE): 2012 added.

	* srcdist-doc/NEWS.in: Updated; release notes added.
	* All files (r0-5-beta-20120416-1): Tag assigned.

2012-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Assign icon to temporary GUI executable file.

	* icons/pkgicon.ico: New file, shamelessly copied from synaptic.

	* configure.ac: Add identification for windres; propagate it to...
	* Makefile.in: ...here; use it to compile object from icon files...
	(srcdir/icons) [%.ico]: ...from this new vpath location.
	(gui.exe): Link to compiled icon's object file.
	(SRCDIST_SUBDIRS): Add icons directory.
